<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frmUserEdit">

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:autoText="false"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regemail"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:autoText="false"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regname"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="@color/rate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <EditText
        android:id="@+id/txtcontact"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:autoText="false"
        android:background="@drawable/rec"
        android:ems="10"

        android:hint="@string/regcontact"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <EditText
        android:id="@+id/txtnic"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:autoText="false"
        android:background="@drawable/rec"
        android:ems="10"

        android:hint="@string/regnic"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <EditText
        android:id="@+id/txtaddress"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:autoText="false"
        android:background="@drawable/rec"
        android:ems="10"

        android:hint="@string/regadd"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/btnupdate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/btncolor"
        android:saveEnabled="false"
        android:text="Update Account"
        android:textAllCaps="false"
        android:textColor="@color/backgroundcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

</androidx.constraintlayout.widget.ConstraintLayout>